added slashes before links

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="/css/clean-blog.min.css" rel="stylesheet">
 
     <!-- My Custom CSS Files -->
-    <link href="styles/MyStyles.css" rel="stylesheet">
+    <link href="/styles/MyStyles.css" rel="stylesheet">
     
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -58,7 +58,7 @@
                         <a class='blue' href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="html/about.html">About</a>
+                        <a href="/html/about.html">About</a>
                     </li>
                     <!-- <li>
                         <a href="post.html">Sample Post</a>
@@ -68,7 +68,7 @@
                         <a href="contact.html">Contact</a>
                     </li> -->
                     <li>
-                        <a href="html/tableau.html">Tableau</a>    
+                        <a href="/html/tableau.html">Tableau</a>    
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('media/facing-mountain-background.png')">
+    <header class="intro-header" style="background-image: url('/media/facing-mountain-background.png')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -218,17 +218,17 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="/js/jqBootstrapValidation.js"></script>
+    <script src="/js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="/js/clean-blog.min.js"></script>
 
 </body>
 
