--- a/html/about.html
+++ b/html/about.html
@@ -12,10 +12,10 @@
     <title>About Me</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="../css/clean-blog.min.css" rel="stylesheet" type="text/css">
+    <link href="/../css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
     <![endif]-->
 
      <!-- My Custom CSS Files -->
-    <link href="../styles/MyStyles.css" rel="stylesheet" type="text/css">
+    <link href="/../styles/MyStyles.css" rel="stylesheet" type="text/css">
     
 </head>
 
