--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     
 
     <!-- Bootstrap Core CSS -->
-    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="/css/clean-blog.min.css" rel="stylesheet">
+    <link href="/css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
     <!-- My Custom CSS Files -->
-    <link href="/styles/MyStyles.css" rel="stylesheet">
+    <link href="/styles/MyStyles.css" rel="stylesheet" type="text/css">
     
     <!-- Custom Fonts -->
     <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -55,7 +55,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class='blue' href="index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="/html/about.html">About</a>
