consolitated img to media, and styles to css, extraneous html files to html

--- a/html/tableau.html
+++ b/html/tableau.html
@@ -10,7 +10,7 @@
 
     <title>Tableau Demo</title>
     <!-- Custom CSS File for Tableau -->
-    <link href="../styles/demo.css" rel="stylesheet" type='text/css'>
+    <link href="../css/demo.css" rel="stylesheet" type='text/css'>
     
     <!-- Bootstrap Core CSS -->
     <!-- <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
