--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
     <!-- My Custom CSS Files -->
-    <link href="styles/MyStyles.css" rel="stylesheet" type="text/css">
+    <link href="css/MyStyles.css" rel="stylesheet" type="text/css">
     
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -114,13 +114,13 @@
                 </div>
 
                 <div class="col-xs-4">
-                    <img src="media/interests.jpg" width=100%>
-                    <span><a href="#skill">Skiing</a></span>
+                   <a href="#skill"><img src="media/interests.jpg" width=100%></a>
+                    <span>Skiing</span>
                 </div>
 
                 <div class="col-xs-4">
-                    <img class="featured-img" src="media/pexels-photo-40120.jpeg" width=100%>
-                    <span><a href="#exp">Business</a></span>
+                    "><img class="featured-img" src="media/business-300.png" width=100%>
+                    <span>Business</span>
                 </div>
             </div>
         </div>
@@ -130,7 +130,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <h2 style=text-align:center>Resume</h2>
+                <h2 style="text-align:center">Resume</h2>
                 <div class="resume">
                    <ol>
                     <a name="ed"></a>
