added color game to site

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <li>
                         <a href="index.html">Home</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="html/about.html">Blog</a>
-                    </li>
+                    </li> -->
                     <!-- <li>
                         <a href="post.html">Sample Post</a>
                     </li> -->
@@ -68,7 +68,7 @@
                         <a href="contact.html">Contact</a>
                     </li> -->
                     <li>
-                        <a href="html/tableau.html">Tableau</a>    
+                        <a href="color-game/color-game.html">Color Game</a>    
                     </li>
                 </ul>
             </div>
@@ -106,7 +106,7 @@
     <!-- INTERESTS IMAGES -->
     <div class="container">
         <div class="row">
-            <div class = "featured">
+            <div class = "featured-img">
                 <h2 style="text-align: center">Interests</h2>
                 <div class="col-xs-4">
                     <img class="featured-img" src="media/study-img.jpg" width=100%>
@@ -114,12 +114,12 @@
                 </div>
 
                 <div class="col-xs-4">
-                   <a href="#skill"><img src="media/interests.jpg" width=100%></a>
+                  <img class = "featured-img" src="media/interests.jpg" width=100/>
                     <span>Skiing</span>
                 </div>
 
                 <div class="col-xs-4">
-                    "><img class="featured-img" src="media/business-300.png" width=100%>
+                    <img class="featured-img" src="media/business-300.png" width=100%>
                     <span>Business</span>
                 </div>
             </div>
