added projects page'

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a href="contact.html">Contact</a>
                     </li> -->
                     <li>
-                        <a href="color-game/color-game.html">Color Game</a>    
+                        <a href="projects.html">Projects</a>    
                     </li>
                 </ul>
             </div>
