--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,10 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
+    <!-- favicon -->
+    <link rel="icon" 
+          type="image/png" 
+          href="media/m-icon.png">
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
