--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <meta name="description" content="A BYU student in Provo, Utah studying Information Systems, Entreprenuership, and Chinese. I'm a front-end web developer, and online business development consultant.">
     <meta name="author" content="Michael Boyd">
 
-    <title>Michael Boyd | Homepage</title>
+    <title>Home</title>
     
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
+<!-- favicon -->
+    <link rel="icon" 
+          type="image/png" 
+          href="media/m-icon.png">
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
