added resume, deleted most of homepage

--- a/color-game/color-game.html
+++ b/color-game/color-game.html
@@ -60,13 +60,9 @@
                     <li>
                         <a href="../projects.html">Projects</a>
                     </li>
-                            
-                    <!-- <li>
-                        <a href="contact.html">Contact</a>
-                    </li> -->
-                    <!-- <li>
-                        <a href="color-game/color-game.html">Color Game</a>    
-                    </li> -->
+                    <li>
+                        <a href="michael_boyd_resume.pdf">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
