--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,9 @@
                     <li>
                         <a href="projects.html">Projects</a>
                     </li>
+                    <li>
+                        <a href="michael_boyd_resume.pdf">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
