--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- favicon -->
-    <link rel="shortcut" 
-          type="image/png" 
-          href="media/m-icon.png">
+    <link rel="icon" 
+        
+          href="media/favicon.ico">
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
