--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
 
     <div class="container">
     	<div class="row">
-    		<div class="col-lg-offset-2">
+    		<div class="col-lg-8">
     			<h2>Javascript Projects</h2>
     			
     				<a href="color-game/color-game.html"><h3>RGB Color Guessing Game</h3></a>
@@ -100,6 +100,15 @@
     				
 				</ul>
     		</div>
+            <div class="col-lg-4">
+            <a target="_blank" href="color-game/color-game.html" class="container-project">
+                    <video autoplay="" loop="">
+                        <source src="color_guesser_web.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <h3 class="title-project">Color Guesser Game</h3>
+                </a>
+            </div>
     	</div>
     </div>
 
