--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- favicon -->
-    <link rel="icon" href="../media/favicon.ico">
+    <link rel="icon" href="media/favicon.ico">
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
