--- a/research.html
+++ b/research.html
@@ -18,6 +18,6 @@
 </head>
 <body>
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSczzHmaqtBJXn2qmjUap-0OH10lczSKrfJ0AiXpeb1fbx6evw/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSczzHmaqtBJXn2qmjUap-0OH10lczSKrfJ0AiXpeb1fbx6evw/viewform?embedded=true" width="100%" height = "1200px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </body>
 </html>
