added todo list to website

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                         <a href="projects.html">Projects</a>
                     </li>
                     <li>
-                        <a href="michael_boyd_resume.pdf">Resume</a>
+                        <a target="_blank" href="michael_boyd_resume.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
