--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a href="projects.html">Projects</a>    
                     </li>
                     <li>
-                        <a href="michael_boyd_resume.pdf">Resume</a>
+                        <a target="_blank" href="michael_boyd_resume.pdf">Resume</a>
                     </li>
                     <!-- <li>
                         <a href="post.html">Sample Post</a>
