--- a/todo.html
+++ b/todo.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.1.1.min.js"></script>
 </head>
-<body>
+<body style ="background-size: 100%">
 
 <div id=container>
 	<h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i></h1>
