--- a/todo.html
+++ b/todo.html
@@ -10,13 +10,13 @@
 <body style ="background-size: 100%">
 
 <div id=container>
-	<h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i></h1>
+	<h1>To-Do List <i class="fa fa-pencil-square-o" aria-hidden="true"></i></h1>
 	<input type="text" placeholder="What do you need to accomplish today?">
 
 	<ul>
-		<li><span><i class="fa fa-trash"></i></span> Go to potions</li>
-		<li><span><i class="fa fa-trash"></i></span> Buy new robes</li>
-		<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash"></i></span> Example 1</li>
+		<li><span><i class="fa fa-trash"></i></span> Example 2</li>
+		<li><span><i class="fa fa-trash"></i></span> Example 3</li>
 	</ul>
 </div>
 
