just learned that caps count

--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
                 
                 <a target="_blank" href="todo.html" class="container-project">
                 <h3 class="title-project">Success List</h3>
-                <img src="assets/todo_img.png" class="link">
+                <img src="assets/todo_img.PNG" class="link">
                 </a>
                 <p> The best kind of ToDo list is the one that gets completed! I've made this minimalistic todo list so you can focus on the most important tasks each day.</p>
                 <p>I used jQuery and more advanced CSS attributes to animate the list. Fun project! </p>
