added color game link

--- a/color-game.html
+++ b/color-game.html
@@ -19,7 +19,7 @@
     <link href="../css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
     <!-- My Custom CSS Files -->
-   <link rel="stylesheet" type="text/css" href="main.css">
+   <link rel="stylesheet" type="text/css" href="color-game/main.css">
     
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
