--- a/color-game.html
+++ b/color-game.html
@@ -13,16 +13,16 @@
     
 
     <!-- Bootstrap Core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Theme CSS -->
-    <link href="../css/clean-blog.min.css" rel="stylesheet" type="text/css">
+    <link href="css/clean-blog.min.css" rel="stylesheet" type="text/css">
 
     <!-- My Custom CSS Files -->
    <link rel="stylesheet" type="text/css" href="color-game/main.css">
     
     <!-- Custom Fonts -->
-    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -55,10 +55,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="../projects.html">Projects</a>
+                        <a href="projects.html">Projects</a>
                     </li>
                     <li>
                         <a target="_blank" href="michael_boyd_resume.pdf">Resume</a>
@@ -95,18 +95,18 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
-	<script type="text/javascript" src="colorGame.js"></script>
+	<script type="text/javascript" src="color-game/colorGame.js"></script>
 <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="../js/jqBootstrapValidation.js"></script>
-    <script src="../js/contact_me.js"></script>
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="../js/clean-blog.min.js"></script>
+    <script src="js/clean-blog.min.js"></script>
 </body>
 </html>
