halfway through consolidating files...

--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
     			<a target="_blank" href="color-game/color-game.html" class="container-project">
                 <h3 class="title-project">RGB Color Guessing Game</h3>
                 <video autoplay="" loop="" style="text-align: center">
-                    <source src="color_guesser_web.mp4" type="video/mp4">
+                    <source src="asets/media/color_guesser_web.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 </a>
