added landing page image

--- a/index.html
+++ b/index.html
@@ -55,22 +55,12 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                   <!--  <li>
                         <a href="index.html">Home</a>
-                    </li>
-                     <!-- <li>
-                        <a href="projects.html">Projects</a>    
                     </li> -->
                     <li>
                         <a target="_blank" href="assets/michael_boyd_resume.pdf">Resume</a>
                     </li>
-                    <!-- <li>
-                        <a href="post.html">Sample Post</a>
-                    </li> -->
-                            
-                    <!-- <li>
-                        <a href="contact.html">Contact</a>
-                    </li> -->
 
                 </ul>
             </div>
@@ -81,7 +71,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('assets/media/landing-crop.jpg')">
+    <header class="intro-header" style="background-image: url('assets/media/landing.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -110,7 +100,7 @@
     <h2>Javascript Projects</h2>
         <div class="row">
             <div class="col-lg-6 project">
-                <a target="_blank" href="color-game/color-game.html" class="container-project">
+                <a target="_blank" href="color-game.html" class="container-project">
                 <h3 class="title-project">RGB Color Guessing Game</h3>
                 <video autoplay="" loop="">
                     <source src="assets/media/color_guesser_web.mp4" type="video/mp4">
