--- a/color-game.html
+++ b/color-game.html
@@ -58,9 +58,6 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="projects.html">Projects</a>
-                    </li>
-                    <li>
                         <a target="_blank" href="michael_boyd_resume.pdf">Resume</a>
                     </li>
                 </ul>
@@ -95,7 +92,7 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
-	<script type="text/javascript" src="assets/js/color-game/colorGame.js"></script>
+	<script type="text/javascript" src="assets/js/colorGame.js"></script>
 <!-- jQuery -->
     <script src="assets/js/lib/jquery/jquery.min.js"></script>
 
