--- a/todo.html
+++ b/todo.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Success List</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/todo.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<script type="text/javascript" src="assets/js/lib/jquery-3.1.1.min.js"></script>
-</head>
-<body style ="background-size: 100%">
+	<head>
+		<title>Success List</title>
+		<!-- Bootstrap Core CSS -->
+	    <link href="assets/css/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	    <!-- Theme CSS -->
+	    <link href="assets/css/lib/clean-blog.min.css" rel="stylesheet" type="text/css">
+		<link rel="stylesheet" type="text/css" href="assets/css/todo.css">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!-- Custom Fonts -->
+	    <link href="assets/css/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+		<script type="text/javascript" src="assets/js/lib/jquery-3.1.1.min.js"></script>
+	</head>
+	<body style ="background-size: 100%">
+	    <!-- Navigation -->
+	   
+	    <!-- <ul class="todoMenu">
+	        <li>
+	            <a href="index.html">Home</a>
+	        </li>
+	        <li>
+	            <a target="_blank" href="michael_boyd_resume.pdf">Resume</a>
+	        </li>
+	    </ul> -->
+	           
 
-<div id=container>
-	<h1>To-Do List <i class="fa fa-pencil-square-o" aria-hidden="true"></i></h1>
-	<input type="text" placeholder="What do you need to accomplish today?">
+		<div id=container>
+			<h1>To-Do List <i class="fa fa-pencil-square-o" aria-hidden="true"></i></h1>
+			<input type="text" placeholder="What do you need to accomplish today?">
 
-	<ul>
-		<li><span><i class="fa fa-trash"></i></span> Example 1</li>
-		<li><span><i class="fa fa-trash"></i></span> Example 2</li>
-		<li><span><i class="fa fa-trash"></i></span> Example 3</li>
-	</ul>
-</div>
+			<ul>
+				<li><span><i class="fa fa-trash"></i></span> Example 1</li>
+				<li><span><i class="fa fa-trash"></i></span> Example 2</li>
+				<li><span><i class="fa fa-trash"></i></span> Example 3</li>
+			</ul>
+		</div>
 
-</div>
-<script type="text/javascript" src="assets/js/todo.js"></script>
-</body>
+		</div>
+		<script type="text/javascript" src="assets/js/todo.js"></script>
+	</body>
 </html>
