--- a/index.html
+++ b/index.html
@@ -41,29 +41,25 @@
     <!-- FIRST ANCHOR LOCATION -->
 <a name="top"></a>
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-custom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
-           <div class="navbar-header page-scroll">
+          <!-- <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-               <!--  <a class="navbar-brand" href="index.html">Mike's Musings</a> -->
-            </div>
-
+            </div> -->
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
                 <ul class="nav navbar-nav navbar-right">
-                   <!--  <li>
-                        <a href="index.html">Home</a>
-                    </li> -->
+                  
                     <li>
                         <a target="_blank" href="assets/michael_boyd_resume.pdf">Resume</a>
                     </li>
 
                 </ul>
-            </div>
+           
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
