added action item list

--- a/action-item.html
+++ b/action-item.html
@@ -17,8 +17,6 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUqNfjjmbccVdLKq9IOH_lQ-IO7Ew79YF5Ys146bF1oJBtCA/viewform?embedded=true" width="100%" height = "1200px" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-<iframe src="https://docs.google.com/spreadsheets/d/1FbY73-D0B_lgVXASSQfoh3WpGahDVJ5fY4U03uLsRp4/pubhtml?gid=1386834576&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/1FbY73-D0B_lgVXASSQfoh3WpGahDVJ5fY4U03uLsRp4/pubhtml?gid=1386834576&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="1200"></iframe>
 </body>
 </html>
