added blog link

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
                 <ul class="nav navbar-nav navbar-right">
                   
+                  	<li>
+                        <a target="_blank" href="http://startupslopes.com">Blog</a>
+                    </li>
                     <li>
                         <a target="_blank" href="assets/michael_boyd_resume.pdf">Resume</a>
                     </li>
